<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/otto"
                android:textColor="@color/colorPrimary"
                android:id="@+id/textView_otto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/otto_copyright"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView_otto_cp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/apache_license"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView_otto_lic" />

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/material_drawer"
                android:id="@+id/textView_matrlDrawer"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/material_drawer_copyright"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView_mtrlDrawer_cp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/apache_license"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView_mtrlDrawer_license" />

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/icons8"
                android:id="@+id/textView_icon8"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_icons8"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textView_icon"
                    android:layout_marginRight="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/app_icons8"
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textView_icons8_by" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/cc_license"
                android:fontFamily="sans-serif-light"
                android:id="@+id/textView_icons8_license" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>