<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <com.yoesuv.infomadiun.utils.RobotoLightTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trims"
        android:textSize="15sp"
        android:id="@+id/textView_terima_kasih"
        android:layout_gravity="center_horizontal" />

    <include layout="@layout/divider" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/person_1"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="center" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/person_as"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>


</LinearLayout>