<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:id="@+id/scrollView_info"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/imageView"
                android:contentDescription="@string/app_name"
                android:src="@drawable/info_madiun_150"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/versi"
                android:id="@+id/textView_version_app"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/my_name"
                android:id="@+id/textView17"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center_horizontal" />

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/colorPrimary"
                android:text="@string/contact"
                android:id="@+id/textView18" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/icon_info_size"
                    android:layout_height="@dimen/icon_info_size"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/twitter_96" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/my_twitter"
                    android:id="@+id/textView19"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_info_size"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gmail_login_96" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/my_email"
                    android:id="@+id/textView20"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/colorPrimary"
                android:text="@string/support"
                android:id="@+id/textView21" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:layout_width="@dimen/icon_info_size"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_support"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/rating_96" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/rate"
                    android:id="@+id/textView_support"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="?attr/colorPrimary"
                android:text="@string/discl"
                android:id="@+id/textView_discl" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="@dimen/icon_info_size"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView_disclaimer"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/high_priority_96" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="11sp"
                    android:text="@string/disclaimer"
                    android:id="@+id/textView_disclaimer"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>