<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:id="@+id/scrollView_changelog"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="20dp">

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_7"
            android:id="@+id/textView_ver106" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_7"
            android:id="@+id/textView_ketver_7" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_6"
            android:id="@+id/textView_ver105" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_6"
            android:id="@+id/textView_ketver_6" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_5"
            android:id="@+id/textView_ver104" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_5"
            android:id="@+id/textView_ketver_5" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_4"
            android:id="@+id/textView_ver103" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_4"
            android:id="@+id/textView_ketver_4" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_3"
            android:id="@+id/textView_ver102" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_2"
            android:id="@+id/textView_ketver_3" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_2"
            android:id="@+id/textView_ver101" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_2"
            android:id="@+id/textView_ketver_2" />

        <include layout="@layout/divider" />

        <com.yoesuv.infomadiun.utils.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?attr/colorPrimary"
            android:text="@string/ver_1"
            android:id="@+id/textView4" />

        <com.yoesuv.infomadiun.utils.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ver_1"
            android:id="@+id/textView_ver_1" />

    </LinearLayout>

</ScrollView>